major improvements in frontend, implemented every api in frontend
