# doc/api.yaml
@@ -229,6 +229,16 @@ paths:
                     items:  {$ref: "#/components/schemas/profile"}
                     minItems: 0
                     maxItems: 100
+                  posts:
+                    type: array
+                    description: the array of post's id in order to retrieve the profile
+                    items: {$ref: "#/components/schemas/photo_metadata"}
+                    minItems: 0
+                    maxItems: 100
+                  is_banned: 
+                    type: boolean
+                    description: if the auth user has banned the :user_id profile
+                    
         '400': {$ref: "#/components/responses/BadRequest"}
         '403': {$ref: "#/components/responses/Forbidden"}
         '404': {$ref: "#/components/responses/NotFound"}
@@ -343,7 +353,7 @@ paths:
           '403': {$ref: "#/components/responses/Forbidden"}
           '404': {$ref: "#/components/responses/NotFound"}
           '500': {$ref: "#/components/responses/InternalServerError"}  
-  /posts/{post_id}/comments/{user_id}:
+  /posts/{post_id}/comments/comment/{user_id}:
     post:
       security:
         - bearerAuth: []
@@ -453,6 +463,7 @@ paths:
           application/json:
             schema:
               type: object
+              description: the username you are going to choose
               properties:
                 name:
                   description: the username you are going to choose
@@ -545,7 +556,7 @@ components:
         time_stamp:
           type: string
           description: the timestamp of the comment
-          format: date-time
+          format: string
           pattern: '[0-9]{4}\-[0-9]{2}\-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{3}'
           example: "2018-03-20T09:12:281Z"
     photo_metadata:
@@ -585,7 +596,7 @@ components:
         time_stamp:
           type: string
           description: the timestamp of the post
-          format: date-time
+          format: string
           example: "2018-03-20T09:12:281Z"
           pattern: '[0-9]{4}\-[0-9]{2}\-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{3}'
     photo:
